--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "debug": "ls -R node_modules/framer-motion || echo 'framer-motion not found'"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -50,6 +51,7 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.5",
+    "framer-motion": "^12.4.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "^15.1.5",
