--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "debug": "ls -R node_modules/framer-motion || echo 'framer-motion not found'"
+    "debug": "ls -R node_modules/framer-motion || echo 'framer-motion not found'",
+    "sitemap": "next-sitemap"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -55,6 +56,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "^15.1.5",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "^18.2.0",
